<resources>
    <string name="app_name">MotorcycleFix</string>
    <string name="mechanic">Mechanic</string>
    <string name="rider">Rider</string>
    <string name="create_account">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password:</string>
    <string name="your_email_address">Email:</string>

    <!--TODO: Login shared preferences-->
    <string name="rider_username">crazydude</string>
    <string name="rider_password">esa@123</string>
    <string name="rider_login_preference">com.fyp.motorcyclefix_rider_login_preference</string>
    <string name="rider_login_status_preference">com.fyp.motorcyclefix_rider_login_status_preference</string>

    <string name="mechanic_username">crazydude</string>
    <string name="mechanic_password">esa@123</string>
    <string name="mechanic_login_preference">com.fyp.motorcyclefix_mechanic_login_preference</string>
    <string name="mechanic_login_status_preference">com.fyp.motorcyclefix_mechanic_login_status_preference</string>
    <!--login shared preference resourses ends here-->


    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_rider_portal">RiderPortal</string>
    <string name="title_home">Home</string>
    <string name="title_workshop">Workshops</string>
    <string name="title_emergency">Emergency</string>
    <string name="title_tracking">Tracking</string>
    <string name="title_settings">Settings</string>

    <string name="search_bar">Search Workshops</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_mechanic_portal">MechanicPortal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_bookings">Bookings</string>
    <string name="menu_bookings_past">Past Bookings</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_workshop_details">Workshop Info</string>
    <string name="menu_logout">Logout</string>
    <string name="bookingId">Booking #565659</string>
    <string name="serviceType">Service Type</string>
    <string name="bikeModel">Hero Hunk</string>
    <string name="serviceIcon">Service Icon</string>
    <string name="viewDetailsIcon">View tracking details info</string>
    <string name="viewDetails">View Details</string>
    <string name="title_activity_rider_settings">Settings</string>

    <string name="riderProfile">Profile</string>
    <string name="riderVehicle">My Vehicles</string>
    <string name="riderLogout">Logout</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="key">key=AAAAkzPIZqg:APA91bHGefpHFuCN9DFHP_NMq9Xqfgg29JTjhelCpIniwj0ZROv_i51eFDLdZkAAgWhl3oEEKU9ItVrudjzDPvEYl5wF6ty7rFGGUDWfjy47TGcd68_-h1YCodyCA4lx8sKtUYcgo714</string>
    <string name="sosMessage">This message is to get your kind attention to help a rider who is currently stuck in the road due to an unexpected breakdown. If you are willing to help please use the following rider detials to get in touch with the person. Thank you!</string>
    <string name="informedMessage">All users nearby you have been informed about your situation, Please await assistance. People willing to help will contact you shortly...</string>
    <string name="schedule">Schedule</string>


</resources>
