<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_Schedule"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_bookings"
            android:icon="@drawable/ic_single_motorbike"
            android:title="@string/menu_bookings" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_workshopDetails"
            android:icon="@drawable/ic_workshops_black_24dp"
            android:title="@string/menu_workshop_details" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_black_24dp"
            android:title="@string/menu_logout" />
    </group>

</menu>
