<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".LoginActivity">

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="100sp"
    android:text="@string/your_email_address"
    android:textAppearance="?android:attr/textAppearanceLarge" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textEmailAddress"
    android:ems="10"
    android:id="@+id/etEmailAddr"
    android:layout_below="@+id/textView"
    android:layout_alignParentStart="true"
    android:autofillHints="" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/password"
    android:id="@+id/textView2"
    android:layout_below="@+id/etEmailAddr"
    android:layout_alignParentStart="true" />

<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:ems="10"
    android:id="@+id/etPassword"
    android:layout_below="@+id/textView2"
    android:layout_alignParentStart="true"
    android:autofillHints="" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/sign_in"
    android:id="@+id/btnSignIn"
    android:layout_below="@+id/etPassword"
    android:layout_alignParentStart="true"
    android:layout_marginTop="25dp"
    android:onClick="signIn"/>

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/create_account"
    android:id="@+id/btnCreate"
    android:layout_alignBottom="@+id/btnSignIn"
    android:layout_toEndOf="@+id/textView2" />


</RelativeLayout>